--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
     <!-- <h1 class="item">hello world</h1>
     <button class="hello">click to change</button> -->
 
-    <!-- <h1 class="item">hello world</h1> -->
-    <!-- <input type="text" class="input" /> -->
-    <!-- 
+    <!-- <h1 class="item">hello world</h1>
+    <input type="text" class="input" /> -->
+
     <form action="submit" class="form">
       <input type="text" class="input" name="email" />
       <input type="text" class="input" name="password" />
       <button type="submit">submit</button>
-    </form> -->
+    </form>
 
-    <button class="add">add</button>
+    <!-- <button class="add">add</button> -->
 
     <!-- <script src="./script.js"></script>
     <script src="./script-2.js"></script> -->
@@ -64,6 +64,7 @@
     <!-- <script src="./module-4-2.js"></script> -->
     <!-- <script src="./module-5.js"></script> -->
     <!-- <script src="./module-6.js"></script> -->
-    <script src="./module-6-2.js" type="module"></script>
+    <!-- <script src="./module-6-2.js" type="module"></script> -->
+    <script src="./m-7.js" type="module"></script>
   </body>
 </html>
